--- a/Jasmine/SpecRunner.html
+++ b/Jasmine/SpecRunner.html
@@ -12,16 +12,12 @@
   <script src="lib/jasmine-2.5.0/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/plane.js"></script>
-  <script src="src/airport.js"></script>
-
+  <script src="src/Player.js"></script>
+  <script src="src/Song.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/features/landing_spec.js"></script>
-  <script src="spec/features/TakeOffSpec.js"></script>
-  <script src="spec/PlaneSpec.js"></script>
-  <script src="spec/AirportSpec.js"></script>
-
+  <script src="spec/SpecHelper.js"></script>
+  <script src="spec/PlayerSpec.js"></script>
 
 </head>
 
