--- a/jasmine/jasmine-standalone-2.5.0/SpecRunner.html
+++ b/jasmine/jasmine-standalone-2.5.0/SpecRunner.html
@@ -14,13 +14,15 @@
   <!-- include source files here... -->
   <script src="src/plane.js"></script>
   <script src="src/airport.js"></script>
-
+  <script src="src/weather.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/features/landing_spec.js"></script>
   <script src="spec/features/TakeOffSpec.js"></script>
   <script src="spec/PlaneSpec.js"></script>
   <script src="spec/AirportSpec.js"></script>
+  <script src="spec/WeatherSpec.js"></script>
+
 
 
 </head>
